NTTT translation and typo fixes

--- a/_posts/2019-12-27-我想试试看.md
+++ b/_posts/2019-12-27-我想试试看.md
@@ -23,6 +23,11 @@ I Want to Try
 &nbsp;
 &nbsp;
 
+**含R18情节，慎入**
+
+&nbsp;
+&nbsp;
+
 
 清濑灰二一向为所欲为。在竹青庄的头两年，他甚至还头脑发热。还顽固不化。要不是此人如此他妈的自律，他身上每一个特点，以尼古所见，都会让他成为一条冷血动物似的玩意。清濑灰二的阴险狡诈之下还有一些所谓的道德准则，而尼古很高兴自己知道这一点。要是他不知道，他肯定害怕他。
 
