--- a/_posts/2020-03-08-十年-1.md
+++ b/_posts/2020-03-08-十年-1.md
@@ -41,7 +41,7 @@ tags:
 
 藤冈对这种自暴自弃的发言感到不可思议。“藏原，我不太关注什么八卦，可连我都听说你和清濑的感情非常好。”而且是好到一夜三四次的那种；藤冈彼时一面感慨年轻真好，一面庆幸自己没有城家兄弟这种口无遮拦的损友。清濑想必为他们操碎了心。
 
-“我不知道，藤冈前辈。“藏原走摇头。”做的时候，我们两个人都很快乐。可是做完之后，灰二哥他……总是很疲惫。早晨起来的时候，他的脸上有时会露出仿佛被掏空了一样的表情。我问他是不是太累了，他就笑着告诉我没事。“
+“我不知道，藤冈前辈。”藏原走摇头。“做的时候，我们两个人都很快乐。可是做完之后，灰二哥他……总是很疲惫。早晨起来的时候，他的脸上有时会露出仿佛被掏空了一样的表情。我问他是不是太累了，他就笑着告诉我没事。”
 
 藤冈点点头。这倒是彻头彻尾的清濑灰二。他不去打断，等着藏原走把话说完。
 
