--- a/_posts/2020-04-13-残存之花.md
+++ b/_posts/2020-04-13-残存之花.md
@@ -64,6 +64,11 @@ tags:
 &nbsp;
 &nbsp;
 
+### lft
+
+&nbsp;
+&nbsp;
+
 他的命运像一张零落成屑的纸片。
 
 糙汉重吉在南岛町遇见了那个女人。他在那里与同伴分开了；一起在偏远的宫川的伐木营干完活之后，他们一群人搬到了伊势的这个小镇。在营地，一切都顺风顺水，报酬丰厚，他还在赌桌上挣了一大笔。现在他身上的钱比以往任何时候都多了，当所有人都像候鸟般从一个工场迁徙到另一个工场的时候，他感到故乡的风一刻不停地召唤着他。
